hydroflow_plus_test/src/snapshots/hydroflow_plus_test__tests__reachability@graphvis_mermaid.snap
---
source: hydroflow_plus_test/src/lib.rs
expression: "reachability.meta_graph().unwrap().to_mermaid(&Default::default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_stream(roots)</code>"/]:::pullClass
3v1[\"(3v1) <code>source_stream(edges)</code>"/]:::pullClass
6v1[\"(6v1) <code>union()</code>"/]:::pullClass
7v1[/"(7v1) <code>tee()</code>"\]:::pushClass
8v1[/"<div style=text-align:center>(8v1)</div> <code>map({<br>    use crate::__staged::*;<br>    |r| (r, ())<br>})</code>"\]:::pushClass
10v1[\"(10v1) <code>join::&lt;'tick, 'tick&gt;()</code>"/]:::pullClass
12v1[\"<div style=text-align:center>(12v1)</div> <code>map({<br>    use crate::__staged::*;<br>    |(_from, (_, to))| to<br>})</code>"/]:::pullClass
14v1[/"(14v1) <code>unique::&lt;'tick&gt;()</code>"\]:::pushClass
15v3["(15v3) <code>handoff</code>"]:::otherClass
16v1[/"<div style=text-align:center>(16v1)</div> <code>for_each({<br>    use crate::__staged::*;<br>    let reached_out = reached_out;<br>    |v| {<br>        reached_out.send(v).unwrap();<br>    }<br>})</code>"\]:::pushClass
6v1-->7v1
1v1-->|0|6v1
12v1-->|1|6v1
7v1-->8v1
8v1-->15v3
3v1-->|1|10v1
10v1-->12v1
15v3-->|0|10v1
7v1-->14v1
14v1-->16v1
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    15v3
    1v1
    3v1
    10v1
    12v1
    6v1
    7v1
    8v1
    14v1
    16v1
    subgraph sg_1v1_var_stream_0 ["var <tt>stream_0</tt>"]
        1v1
    end
    subgraph sg_1v1_var_stream_1 ["var <tt>stream_1</tt>"]
        3v1
    end
    subgraph sg_1v1_var_stream_3 ["var <tt>stream_3</tt>"]
        6v1
        7v1
    end
    subgraph sg_1v1_var_stream_4 ["var <tt>stream_4</tt>"]
        8v1
    end
    subgraph sg_1v1_var_stream_5 ["var <tt>stream_5</tt>"]
        10v1
    end
    subgraph sg_1v1_var_stream_6 ["var <tt>stream_6</tt>"]
        12v1
    end
    subgraph sg_1v1_var_stream_7 ["var <tt>stream_7</tt>"]
        14v1
    end
end

