hydroflow_plus_test/src/snapshots/hydroflow_plus_test__tests__teed_join@graphvis_dot.snap
---
source: hydroflow_plus_test/src/lib.rs
expression: "joined.meta_graph().unwrap().to_dot(&Default::default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_stream(input_stream)", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) tee()", shape=house, fillcolor="#ffff88"]
    n3v1 [label="(n3v1) map({\l    use crate::__staged::*;\l    |v| (v + 1, ())\l})\l", shape=house, fillcolor="#ffff88"]
    n4v1 [label="(n4v1) tee()", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) map({\l    use crate::__staged::*;\l    |v| (v - 1, ())\l})\l", shape=house, fillcolor="#ffff88"]
    n6v1 [label="(n6v1) tee()", shape=invhouse, fillcolor="#88aaff"]
    n7v1 [label="(n7v1) join::<'tick, 'tick>()", shape=invhouse, fillcolor="#88aaff"]
    n8v1 [label="(n8v1) tee()", shape=invhouse, fillcolor="#88aaff"]
    n9v1 [label="(n9v1) map({\l    use crate::__staged::*;\l    |t| t.0\l})\l", shape=invhouse, fillcolor="#88aaff"]
    n10v1 [label="(n10v1) tee()", shape=invhouse, fillcolor="#88aaff"]
    n11v1 [label="(n11v1) for_each({\l    use crate::__staged::*;\l    let output = output;\l    |v| {\l        output.send(v).unwrap();\l    }\l})\l", shape=house, fillcolor="#ffff88"]
    n12v1 [label="(n12v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n13v1 [label="(n13v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n1v1 -> n2v1
    n3v1 -> n12v1
    n2v1 -> n3v1
    n5v1 -> n13v1
    n2v1 -> n5v1
    n7v1 -> n8v1
    n4v1 -> n7v1 [label="0"]
    n6v1 -> n7v1 [label="1"]
    n9v1 -> n10v1
    n8v1 -> n9v1
    n10v1 -> n11v1
    n12v1 -> n4v1
    n13v1 -> n6v1
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1
        n2v1
        n3v1
        n5v1
        subgraph "cluster_sg_1v1_var_stream_0" {
            label="var stream_0"
            n1v1
            n2v1
        }
        subgraph "cluster_sg_1v1_var_stream_1" {
            label="var stream_1"
            n3v1
        }
        subgraph "cluster_sg_1v1_var_stream_2" {
            label="var stream_2"
            n5v1
        }
    }
    subgraph "cluster n2v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 0"
        n4v1
        n6v1
        n7v1
        n8v1
        n9v1
        n10v1
        n11v1
        subgraph "cluster_sg_2v1_var_stream_1" {
            label="var stream_1"
            n4v1
        }
        subgraph "cluster_sg_2v1_var_stream_2" {
            label="var stream_2"
            n6v1
        }
        subgraph "cluster_sg_2v1_var_stream_3" {
            label="var stream_3"
            n7v1
            n8v1
        }
        subgraph "cluster_sg_2v1_var_stream_4" {
            label="var stream_4"
            n9v1
            n10v1
        }
        subgraph "cluster_sg_2v1_var_stream_5" {
            label="var stream_5"
            n11v1
        }
    }
}

