hydroflow_plus_test/src/snapshots/hydroflow_plus_test__tests__teed_join_multi_node@graphvis_dot.snap
---
source: hydroflow_plus_test/src/lib.rs
expression: "joined.meta_graph().unwrap().to_dot(&Default::default())"
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_iter({\l    use crate::__staged::*;\l    0..5\l})\l", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) for_each({\l    use crate::__staged::*;\l    let output = output;\l    |v| {\l        output.send(v).unwrap();\l    }\l})\l", shape=house, fillcolor="#ffff88"]
    n1v1 -> n3v1
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1
        n3v1
        subgraph "cluster_sg_1v1_var_stream_5" {
            label="var stream_5"
            n1v1
        }
    }
}

