hydroflow_plus_test/src/snapshots/hydroflow_plus_test__tests__teed_join_multi_node@graphvis_mermaid.snap
---
source: hydroflow_plus_test/src/lib.rs
expression: "joined.meta_graph().unwrap().to_mermaid(&Default::default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"<div style=text-align:center>(1v1)</div> <code>source_iter({<br>    use crate::__staged::*;<br>    0..5<br>})</code>"/]:::pullClass
3v1[/"<div style=text-align:center>(3v1)</div> <code>for_each({<br>    use crate::__staged::*;<br>    let output = output;<br>    |v| {<br>        output.send(v).unwrap();<br>    }<br>})</code>"\]:::pushClass
1v1-->3v1
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1
    3v1
    subgraph sg_1v1_var_stream_7 ["var <tt>stream_7</tt>"]
        1v1
    end
    subgraph sg_1v1_var_stream_8 ["var <tt>stream_8</tt>"]
        3v1
    end
end

